# adventofcode

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  day15.cpp  day2.cpp  day25.cpp  day4.py  day5.cpp
2019/monadventofcode/: .gitignore  package.yaml
2019/monadventofcode/src/: Intcode.hs  Printers.hs  ReadFile.hs
2019/monadventofcode/src/day11/: Main.hs
2019/monadventofcode/test/: Spec.hs
2020/: README.md  day1.py  day23.cpp  day3.cpp
2020/hadventofcode/src/: ReadFile.hs
2021/adventofcrustacean/: .gitignore  Cargo.toml
2021/adventofcrustacean/src/: lib.rs
2021/adventoflua/: day14.lua  day16.lua  day18.lua  day6.lua
2021/day1/: day1.cpp  day1.hs
2022/crustofcode/: Cargo.toml
2022/crustofcode/src/: lib.rs
2022/lua-backup/: Wikilib-strings.lua  Wikilib-tables.lua  day7.lua
2023/crustofcode/: Cargo.toml
2023/crustofcode/src/: lib.rs
2024/: .gitignore
2024/crustofcode/: Cargo.toml  run-day.sh
2024/crustofcode/src/: lib.rs
hadventofcode/: .gitignore  package.yaml
hadventofcode/sols/: Day6.hs
hadventofcode/sols/day10/: Day10.hs
hadventofcode/sols/day11/: Day11.hs
hadventofcode/sols/day12/: Day12.hs
hadventofcode/sols/day13/: Day13.hs
hadventofcode/sols/day15/: Day15.hs
hadventofcode/sols/day16/: Day16.hs
hadventofcode/sols/day17/: Day17.hs
hadventofcode/sols/day18/: Day18.hs
hadventofcode/sols/day20/: Day20.hs
hadventofcode/sols/day21/: Day21.hs
hadventofcode/sols/day22/: Day22.hs
hadventofcode/sols/day8/: Day8.hs
hadventofcode/src/: AoCAssembly.hs  AoCAssemblyStateful.hs  ReadFile.hs
(+23 files in other folders)
