[package]
name = "crustofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.10.0"
slab_tree = "0.3.2"
pathfinding = "2.2.3"
either = "1.8.0"
aoc-parse = "0.2.17"
num = "0.4.1"
memoize = "0.4.1"
